--- a/sampleapp/build.gradle
+++ b/sampleapp/build.gradle
@@ -31,5 +31,5 @@ allprojects {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:26.+'
-    compile project(path: ':animateddismissableactivity')
+    compile 'com.github.OpenCraft:AnimatedDismissableActivity:-SNAPSHOT'
 }
